Actions
Bug #12584
closedspitfire: '0' flag used with '%b' cmn_err format
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 4.4.4-il:
../../sun4u/cpu/spitfire.c:3260: error: '0' flag used with '%b' cmn_err format [-Wformat] ../../sun4u/cpu/spitfire.c:3260: error: '0' flag used with '%b' cmn_err format [-Wformat] ../../sun4u/cpu/spitfire.c:3297: error: '0' flag used with '%b' cmn_err format [-Wformat] ../../sun4u/cpu/spitfire.c:3305: error: '0' flag used with '%b' cmn_err format [-Wformat]
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit cd8579f741f9678d47f40aa55c57144419a78b13
commit cd8579f741f9678d47f40aa55c57144419a78b13 Author: Toomas Soome <tsoome@me.com> Date: 2020-04-24T07:13:23.000Z 12584 spitfire: '0' flag used with '%b' cmn_err format Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions